package com.mercedesbenz.sechub.adapter.pds;

public interface PDSAdapterConfigDataProvider {

    PDSAdapterConfigData getPDSAdapterConfigData();
}
